--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-element": "^1.2.1",
+    "react-native-elements": "^1.1.0",
     "react-native-material-buttons": "^0.5.0",
     "react-native-material-textfield": "^0.12.0",
     "react-native-vector-icons": "^6.4.2",
@@ -21,8 +22,8 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
     "babel-preset-expo": "^5.0.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
