--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ios": "react-native run-ios"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.3.4",
     "prop-types": "latest",
     "react": "16.5.0",
     "react-native": "0.59.5",
@@ -26,12 +27,12 @@
     "@babel/plugin-transform-react-jsx": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
-    "metro-react-native-babel-preset": "^0.54.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-react": "7.11.0",
+    "metro-react-native-babel-preset": "^0.54.0",
     "scheduler": "^0.14.0"
   },
   "private": true
